# mr_kot

./: .gitignore  README.md  pyproject.toml
examples/: checks_example.py  facts_example.py
mr_kot/: __init__.py  cli.py  decorators.py  registry.py  runner.py  validators.py
tests/: conftest.py  test_aggregation.py  test_api.py  test_checks.py  test_cli.py  test_depends.py  test_facts.py  test_fail_fast.py  test_fixtures.py  test_parametrize.py  test_plugins.py  test_registry.py  test_runner_behaviors.py  test_selectors.py  test_selectors_forms.py  test_selectors_string.py  test_tags.py  test_validators.py
